Fix nav button spacing

--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,7 @@ label,
 
 .btns {
     align-self: flex-end;
+    padding-right: .5%;
 }
 
 .nav-btn {
